--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -5,33 +5,59 @@
    "metadata": {},
    "source": [
     "## 作業 1\n",
-    "### 題目\n",
-    "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
+    "<i> 請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
     "1. 你選的這組資料為何重要\n",
     "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
     "3. 蒐集而來的資料型態為何\n",
-    "4. 這組資料想解決的問題如何評估"
+    "4. 這組資料想解決的問題如何評估</i>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 回答\n",
-    "Competition [LANL Earthquake Prediction](https://www.kaggle.com/c/LANL-Earthquake-Prediction/overview).  此競賽的目標：從實驗室中產生的地震波數據，建立預測地震發生時間的模型。\n",
+    "**Answer:**\n",
+    "\n",
+    "Competition [LANL Earthquake Prediction](https://www.kaggle.com/c/LANL-Earthquake-Prediction/overview).  此競賽的目標：從實驗室產生的模擬地震數據，建立預測地震發生時間的模型。\n",
     "* 重要性：強度較大的地震會帶來嚴重的災害，若能更準確地預測地震發生的時間，將有助於地震的預警與防備。\n",
     "* 資料來源：\n",
     "    + Geophysics Group, Los Alamos National Laboratory, U.S.: 準備此競賽所使用的資料。\n",
     "    + Department of Geosciences, Pennsylvania State University, U.S.: 進行實驗室中的地震模擬，並提供數據。\n",
-    "* 資料型態：地震波時間序列\n",
-    "* 模型評估指標：地震發生時間的「預測值」與「實際值」之間的 mean absolute error \n"
+    "* 資料型態：seismic data 時間序列\n",
+    "* 模型評估指標：地震發生時間的「預測值」與「實際值」之間的 mean absolute error \n",
+    "\n",
+    "-------------------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 作業 2"
+    "## 作業 2\n",
+    "<i>想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
+    "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
+    "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
+    "3. 蒐集而來的資料型態為何\n",
+    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer:**\n",
+    "\n",
+    "1. 核心問題：如何增加車隊的載客服務次數\n",
+    "2. 資料\n",
+    "    * 可能需要的資料：\n",
+    "        + 內部資料：顧客/會員資料、預約紀錄、服務狀況紀錄、顧客意見/滿意度、油耗與維修紀錄\n",
+    "        + 外部資料：天氣紀錄、交通狀況紀錄、節日/國定假日、熱門旅遊景點\n",
+    "    * 資料來源：內部資料、網路爬蟲\n",
+    "    * 資料型態：除網路爬蟲外，大部分為結構化資料\n",
+    "3. 要回答的問題：\n",
+    "    * 各種日子、時段內，顧客的出發地、目的地分佈為何？能接受的候車時間為何？\n",
+    "    * 承上題，車輛應該在什麼區域待命 能接到較多顧客預約？\n",
+    "------------------------------------------"
    ]
   },
   {
