--- a/homework/Day_003-1_HW.ipynb
+++ b/homework/Day_003-1_HW.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,17 +30,186 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {'國家': ,\n",
-    "        '人口': }\n",
-    "data = pd.DataFrame()"
+    "# data = {'國家': ,\n",
+    "#         '人口': }\n",
+    "# data = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_number_to_alphabet(number):\n",
+    "    \"\"\"\n",
+    "    Returns:\n",
+    "        A string of 2 letters determined from `number` in a mysterious way.\n",
+    "    \"\"\"\n",
+    "    letter1 = chr(ord('A') + (number // 26) % 26)\n",
+    "    letter2 = chr(ord('A') + number % 26)\n",
+    "    return letter1 + letter2\n",
+    "\n",
+    "def distinct_random_int(low, high, size):\n",
+    "    \"\"\"\n",
+    "    Returns:\n",
+    "        An array of distinct random integers within [low, high).\n",
+    "    \"\"\"\n",
+    "    numbers = set()\n",
+    "    while len(numbers) < size:\n",
+    "        a = np.random.randint(low, high)\n",
+    "        numbers.add(a)\n",
+    "    numbers_arr = np.array(list(numbers))\n",
+    "    np.random.shuffle(numbers_arr)\n",
+    "    return numbers_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate data\n",
+    "record_cnt = 10\n",
+    "countries = [convert_number_to_alphabet(x) for x in distinct_random_int(low=0, high=26**2, size=record_cnt)]\n",
+    "populations = np.random.randint(low=1, high=101, size=record_cnt)\n",
+    "\n",
+    "data_dict = {'country': countries, 'population': populations}\n",
+    "data = pd.DataFrame(data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TW</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AQ</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WA</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YT</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>VC</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>YA</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>EZ</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>XR</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NO</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country  population\n",
+       "0      TW           4\n",
+       "1      AQ          64\n",
+       "2      WA          28\n",
+       "3      YT          22\n",
+       "4      VC          36\n",
+       "5      YA          78\n",
+       "6      SD          53\n",
+       "7      EZ          36\n",
+       "8      XR          77\n",
+       "9      NO          43"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country with largest population: YA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the country with largest population\n",
+    "row = data['population'].idxmax()\n",
+    "print('country with largest population:', data['country'][row])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -63,7 +230,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
